--- a/Fertilizer Model.ipynb
+++ b/Fertilizer Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b25c1c19",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f82d27db",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "aa54832b",
    "metadata": {},
    "outputs": [],
@@ -56,19 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d4f046d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Temparature', 'Humidity ', 'Moisture', 'Soil Type', 'Crop Type',\n",
+       "Index(['Temparature', 'Humidity ', 'Moisture', 'Soil_Type', 'Crop_Type',\n",
        "       'Nitrogen', 'Potassium', 'Phosphorous', 'Fertilizer Name'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,8 +90,8 @@
     "\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
-    "df['Soil Type'] = label_encoder.fit_transform(df['Soil Type'])\n",
-    "df['Crop Type'] = label_encoder.fit_transform(df['Crop Type'])\n",
+    "df['Soil Type'] = label_encoder.fit_transform(df['Soil_Type'])\n",
+    "df['Crop Type'] = label_encoder.fit_transform(df['Crop_Type'])\n",
     "df['Fertilizer Name'] = label_encoder.fit_transform(df['Fertilizer Name'])"
    ]
   },
@@ -470,36 +470,21 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.50      0.67         2\n",
+      "           0       1.00      1.00      1.00         2\n",
       "           1       1.00      1.00      1.00         1\n",
-      "           2       0.00      0.00      0.00         0\n",
       "           3       1.00      1.00      1.00         1\n",
       "           4       1.00      1.00      1.00         5\n",
       "           5       1.00      1.00      1.00         5\n",
       "           6       1.00      1.00      1.00         6\n",
       "\n",
-      "    accuracy                           0.95        20\n",
-      "   macro avg       0.86      0.79      0.81        20\n",
-      "weighted avg       1.00      0.95      0.97        20\n",
+      "    accuracy                           1.00        20\n",
+      "   macro avg       1.00      1.00      1.00        20\n",
+      "weighted avg       1.00      1.00      1.00        20\n",
       "\n",
-      "Accuracy: 0.95000\n",
+      "Accuracy: 1.00000\n",
       "Precision: 1.00000\n",
-      "Recall: 0.95000\n",
-      "F1: 0.96667\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "Recall: 1.00000\n",
+      "F1: 1.00000\n"
      ]
     }
    ],
@@ -1070,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "60f3580c",
    "metadata": {},
    "outputs": [
@@ -1114,51 +1099,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "7bf0d01d",
+   "execution_count": 45,
+   "id": "ad35362e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_prediction(Nitrogen,Potassium,Phosphorous,Temparature,Humidity,Moisture,Soil Type):\n",
+    "def make_prediction(Nitrogen, Potassium, Phosphorous, Temparature, Moisture, Humidity , Soil_Type, Crop_Type):\n",
     "    dictionary={\n",
     "        \"Nitrogen\": Nitrogen,\n",
     "        \"Potassium\": Potassium,\n",
     "        \"Phosphorous\": Phosphorous,\n",
-    "        \"Temperature\": Temparature,\n",
-    "        \"Humidity\": Humidity,\n",
-    "        \"Moisture\": Moisture,\n",
-    "        \"Soil Type\"; Soil Type\n",
+    "        \"Temparature\": Temparature,\n",
+    "        \"Humidity \": Humidity ,\n",
+    "        \"Soil_Type\": Soil_Type,\n",
+    "        \"Crop_Type\": Crop_Type,\n",
     "    }\n",
     "    df= pd.DataFrame(dictionary, index=[0])\n",
     "    predicted=model.predict(df)\n",
-    "    return print(\"Predicted fertilizer is\", predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "25a14574",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets import Dropdown, FloatSlider, IntSlider, interact"
+    "    return print(\"Predicted price is\", predicted) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "761700a6",
+   "id": "9bf9df48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dbdeed52f174bf2bb98eea24f370e30",
+       "model_id": "07226dcfe9064526a5092aa14b325ef7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=18, description='Nitrogen', max=41, min=5), FloatSlider(value=3.68354430…"
+       "interactive(children=(IntSlider(value=18, description='Nitrogen', max=42, min=4), FloatSlider(value=3.38383838…"
       ]
      },
      "metadata": {},
@@ -1166,41 +1141,62 @@
     }
    ],
    "source": [
+    "from ipywidgets import interact, IntSlider, FloatSlider, Dropdown\n",
+    "\n",
+    "def make_prediction(Nitrogen, Potassium, Phosphorous, Temparature, Moisture, Humidity , Soil_Type, Crop_Type):\n",
+    "    # Placeholder function for making predictions\n",
+    "    pass\n",
+    "\n",
+    "soil_types = df['Soil_Type'].unique().tolist()\n",
+    "crop_types = df['Crop Type'].unique().tolist()\n",
+    "\n",
     "interact(\n",
     "    make_prediction,\n",
     "    Nitrogen=IntSlider(\n",
-    "        min=X_train[\"Nitrogen\"].min(),\n",
-    "        max=X_train[\"Nitrogen\"].max(),\n",
-    "        value=X_train[\"Nitrogen\"].mean(),\n",
+    "        min=int(df[\"Nitrogen\"].min()),\n",
+    "        max=int(df[\"Nitrogen\"].max()),\n",
+    "        value=int(df[\"Nitrogen\"].mean()),\n",
     "    ),\n",
     "    Potassium=FloatSlider(\n",
-    "        min=X_train[\"Potassium\"].min(),\n",
-    "        max=X_train[\"Potassium\"].max(),\n",
-    "        \n",
-    "        value=X_train[\"Potassium\"].mean(),\n",
+    "        min=float(df[\"Potassium\"].min()),\n",
+    "        max=float(df[\"Potassium\"].max()),\n",
+    "        value=df[\"Potassium\"].mean(),\n",
     "    ),\n",
     "    Phosphorous=FloatSlider(\n",
-    "        min=X_train[\"Phosphorous\"].min(),\n",
-    "        max=X_train[\"Phosphorous\"].max(),\n",
-    "        value=X_train[\"Phosphorous\"].mean(),\n",
+    "        min=float(df[\"Phosphorous\"].min()),\n",
+    "        max=float(df[\"Phosphorous\"].max()),\n",
+    "        value=df[\"Phosphorous\"].mean(),\n",
     "    ),\n",
     "    Temparature=FloatSlider(\n",
-    "        min=X_train[\"Temparature\"].min(),\n",
-    "        max=X_train[\"Temparature\"].max(),\n",
-    "\n",
+    "        min=float(df[\"Temparature\"].min()),\n",
+    "        max=float(df[\"Temparature\"].max()),\n",
+    "        value=df[\"Temparature\"].mean(),\n",
     "    ),\n",
     "    Moisture=FloatSlider(\n",
-    "        min=X_train[\"Moisture\"].min(),\n",
-    "        max=X_train[\"Moisture\"].max(),\n",
-    "        value=X_train[\"Moisture\"].mean(),\n",
+    "        min=float(df[\"Moisture\"].min()),\n",
+    "        max=float(df[\"Moisture\"].max()),\n",
+    "        value=df[\"Moisture\"].mean(),\n",
     "    ),\n",
-    ");"
+    "    Humidity=FloatSlider(\n",
+    "        min=float(df[\"Humidity \"].min()),\n",
+    "        max=float(df[\"Humidity \"].max()),\n",
+    "        value=df[\"Humidity \"].mean(),\n",
+    "    ),\n",
+    "    Soil_Type=Dropdown(\n",
+    "        options=soil_types,\n",
+    "        value=soil_types[0],\n",
+    "    ),\n",
+    "    Crop_Type=Dropdown(\n",
+    "        options=crop_types,\n",
+    "        value=crop_types[0],\n",
+    "    ),\n",
+    ");\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf9df48",
+   "id": "089f1291",
    "metadata": {},
    "outputs": [],
    "source": []
