--- a/Fertilizer Model.ipynb
+++ b/Fertilizer Model.ipynb
@@ -21,7 +21,8 @@
     "import numpy as np # for scientific computing with Python\n",
     "import matplotlib.pyplot as plt # for data visualization\n",
     "%matplotlib inline\n",
-    "import seaborn as sns # for advanced visualization\n"
+    "import seaborn as sns # for advanced visualization\n",
+    " "
    ]
   },
   {
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "6d7442e9",
    "metadata": {},
    "outputs": [
@@ -716,8 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "6ffb388f",
+   "execution_count": 20,
+   "id": "fed5695e",
    "metadata": {},
    "outputs": [
     {
@@ -725,14 +726,14 @@
      "output_type": "stream",
      "text": [
       "Test Accuracy: 1.0\n",
-      "Training Accuracy: 0.99\n",
+      "Training Accuracy: 1.0\n",
       "Validation Accuracy: 1.0\n"
      ]
     }
    ],
    "source": [
-    "#Testing accuracy for training, validation and test set for randomforest\n",
-    "acc_train_rf=accuracy_score(y_train, model_randomforest.predict(X_train))\n",
+    "#Testing accuracy for training, validation and test set for decision tree\n",
+    "acc_train_rf=accuracy_score(y_train, model.predict(X_train))\n",
     "acc_val_rf=model.score(X_val,y_val)\n",
     "test_acc_rf = model.score(X_test,y_test)\n",
     "print(\"Test Accuracy:\", round(test_acc_rf, 2))\n",
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "273906c4",
    "metadata": {},
    "outputs": [],
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "7de417f1",
    "metadata": {},
    "outputs": [
@@ -797,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "292fb090",
    "metadata": {},
    "outputs": [
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "d9f1949f",
    "metadata": {},
    "outputs": [
@@ -849,7 +850,7 @@
        "                 RandomForestClassifier(random_state=42))])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "7e5e597a",
    "metadata": {},
    "outputs": [
@@ -894,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "e8058fad",
    "metadata": {
     "scrolled": true
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "579a1259",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "98a80f76",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "30313052",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "33fdb50b",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1103,7 @@
        "                ('gaussiannb', GaussianNB())])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "3738f592",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "e470a473",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "17a6f70e",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "a587ba76",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "e152876b",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "6526c002",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "67bbd65a",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "48e269d7",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "60f3580c",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "ad35362e",
    "metadata": {},
    "outputs": [],
@@ -1496,14 +1497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "9bf9df48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c79a69b0ccfa46bfb368d0f47d94233e",
+       "model_id": "2e4e96a18c4245c7a1bc22f8ab8c7a81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1570,8 +1571,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "3817b622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the model to a file\n",
+    "with open('stored_model_fr.pkl','wb') as file:\n",
+    "    pickle.dump(model, file)\n",
+    "\n",
+    "# Load the model from the file\n",
+    "with open('stored_model_fr.pkl', 'rb') as file:\n",
+    "    stored_model_fr = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79cca410",
    "metadata": {},
    "outputs": [],
    "source": []
